--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/Tutorial 2/WebGL Builds/Build;D:/Tutorial 2/WebGL Builds;D:/Tutorial 2/build/Build;D:/Tutorial 2/build;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/Tutorial 2/build/Build;D:/Tutorial 2/build;D:/Tutorial 2/New folder;;;;;;;\"}"
             }
         ]
     }
